--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
     --box-shadow:wheat;
     --author-color:rgb(43, 173, 216);
     --border-line-color:white;
-  }
+}
   
   
   body {
@@ -67,7 +67,7 @@
     padding-right: 30px;
   }
   
-  .li, .article {
+  .article {
     list-style-type: none;
     display: inline;
   }
@@ -87,13 +87,13 @@
     background-color: var(--img-background);
   }
   
-  .img, .article-img {
+  .article-img {
     margin-top: 20px;
     width: 265px;
     height: 205px;
   }
   
-    .h2, .article-title {
+  .article-title {
     background: none;
     font-family: sans-serif;
     overflow: hidden;
@@ -103,7 +103,7 @@
     -webkit-box-orient: vertical;
   }
   
-    .p, .article-description {
+  .article-description {
     font-size: 25px;
     color: var(--font-color);
     background: none;
@@ -115,7 +115,7 @@
     font-family: sans-serif;
   }
   
-    .span, .article-author {
+  .article-author {
     background: none;
     font-size: 20px;
     font-family: Trebuchet MS;
@@ -129,7 +129,7 @@
     text-decoration: none;
   }
   
-  #not-found {
+  .not-found {
     color: var(--font-color);
     font-family: sans-serif;
     font-size: 35px;
@@ -137,7 +137,7 @@
     list-style-type: none;
   }
   
-  #loading {
+  .loading {
     color: var(--font-color);
     font-family: sans-serif;
     font-size: 35px;
@@ -192,20 +192,20 @@
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
     }
-    #not-found {
+    .not-found {
       color: var(--font-color);
       font-family: sans-serif;
       font-size: 25px;
       margin-left: 20px;
       list-style-type: none;
     }
-    #loading {
+    .loading {
       color: var(--font-color);
       font-family: sans-serif;
       font-size: 25px;
       margin-left: 25px;
     }
-    .li, .article {
+    .article {
       list-style-type: none;
       display: inline-block;
       margin-left: -14px;
@@ -215,7 +215,7 @@
       height: 250px;
       background-color: var(--img-background);
     }
-    .img, .article-img {
+    .article-img {
       margin-top: 20px;
       width: 265px;
       height: 220px;
